--- a/chatgpt-clone/src/pages/Home/Home.css
+++ b/chatgpt-clone/src/pages/Home/Home.css
@@ -54,8 +54,29 @@
 
 .home-container-temporary-chat:hover {
   background-color: rgba(94, 94, 94, 0.589);
+  cursor: pointer;
 }
+
+
 
 .home-container-temporary-chat svg {
   width: 20px;
+}
+
+.home-container-temporary-chat-tooltip {
+  position: absolute;
+  transform: translateY(45px);
+  right: 0;
+  width: 145px;
+  margin-right: 10px;
+  padding: 10px;
+  border-radius: 1cap;
+  background-color: black;
+  color: white;
+  font-size: 12px;
+  opacity: 0;
+}
+
+.home-container-temporary-chat:hover .home-container-temporary-chat-tooltip {
+  opacity: 1;
 }
