--- a/chatgpt-clone/src/pages/Home/Home.css
+++ b/chatgpt-clone/src/pages/Home/Home.css
@@ -4,8 +4,17 @@
   margin: 0;
 }
 
+h1 {
+  color: white;
+  font-weight: 1;
+  font-size: 30px;
+  text-align: center;
+  margin-top: 175px;
+}
+
 .home-page {
   background-color: rgb(37, 37, 37);
+  height: 100vh;
 }
 
 .home-container-header {
@@ -47,8 +56,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40px;
-  height: 40px;
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
 }
 
