Refactor MiniSideBar and Home components for improved layout and styling; adjust dropdown positioning in ChatGPT element

--- a/chatgpt-clone/src/components/ChatgptElement/ChatgptElement.css
+++ b/chatgpt-clone/src/components/ChatgptElement/ChatgptElement.css
@@ -25,9 +25,9 @@
 
 .chatgpt-element-dropdown {
   position: absolute;
-  left: 0; 
-  transform: translateY(80px);
-  margin-left: 10px;
+  top: 50px;
+  left: 0;
+  margin-left: 55px;
   padding: 5px;
   border-radius: 0.75cap;
   background-color: rgb(53, 53, 53);
