--- a/chatgpt-clone/src/components/MiniSideBar/MiniSideBar.css
+++ b/chatgpt-clone/src/components/MiniSideBar/MiniSideBar.css
@@ -8,6 +8,10 @@
   justify-content: space-between;
 }
 
+.mini-side-bar-container.idle {
+  display: none;
+}
+
 .mini-side-bar-icons {
   display: flex;
   flex-direction: column;
